objects/Credit_Details__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Credits Details</relationshipLabel>
        <relationshipName>Credits_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Check__c</fullName>
        <label>Credit Check</label>
        <referenceTo>Credit_Check__c</referenceTo>
        <relationshipLabel>Credits Details</relationshipLabel>
        <relationshipName>Credits_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Detail_Record_Type_Mapping__c</fullName>
        <label>Credit Detail Record Type Mapping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Action__c</fullName>
        <label>Legal Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filed</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liability_Amount__c</fullName>
        <label>Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Years_Value__c</fullName>
        <label>Number of Years Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Years_from_Date_Filed__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(Date_Filed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Years from Date Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal</label>
        <referenceTo>Principal__c</referenceTo>
        <relationshipLabel>Credits Details</relationshipLabel>
        <relationshipName>Credits_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <label>Credit Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits Details</pluralLabel>
    <recordTypes>
        <fullName>Bankruptcy</fullName>
        <active>true</active>
        <label>Bankruptcy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lien</fullName>
        <active>true</active>
        <label>Lien</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>